--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   geolocator: ^13.0.1
   intl: ^0.19.0
   lottie: ^3.1.2
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
